# huelightcli

./: Cargo.toml  README.md
.github/workflows/: ci.yml
huelight-cli/: Cargo.toml
huelight-cli/src/: error.rs  main.rs
huelight-core/: Cargo.toml
huelight-core/src/: client.rs  config.rs  error.rs  hue_api.rs  lib.rs  logger.rs  models.rs
huelight-core/src/models/: createuser.rs  hueerror.rs  light.rs  mod.rs
src/: main.rs
src/hue/: client.rs  models.rs
