[package]
name = "huelight-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
reqwest = "0.12.24"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = {version = "1.48.0", features = ["full"] }
huelight-core = { path = "../huelight-core" }
thiserror = "2.0.17"
