[package]
name = "huelight-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
dirs = "6.0.0"
reqwest = "0.12.24"
serde = "1.0.228"
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = {version = "1.48.0", features = ["full"] }
